Angular Material upload form

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 
     <div ui-view="navigation" id="navigation" ng-controller="navigation"></div>
 
-    <div ui-view="content" id="content"></div>
+    <div ui-view="content" id="content" layout-padding></div>
 
 
 <!-- build:js build.min.js -->
