Angular Material upload form. Dialog window with color list

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <div ui-view="navigation" id="navigation" ng-controller="navigation"></div>
+    <div ui-view="navigation" id="navigation"></div>
 
     <div ui-view="content" id="content" layout-padding></div>
 
