--- a/client/js/directives/menuButtons.html
+++ b/client/js/directives/menuButtons.html
@@ -14,6 +14,7 @@
          layout-align="end center"
          flex-gt-sm="30"
          flex-sm="100">
+        <h2 ng-show="registarationSuccess || loginSuccess">{{user.username}}</h2>
         <md-button class="md-raised md-accent"
                    ng-hide="registarationSuccess || loginSuccess"
                    ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}"
@@ -22,10 +23,11 @@
                    ng-hide="registarationSuccess || loginSuccess"
                    ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}"
                    ng-click="showRegistration($event)">Registration</md-button>
-        <h2 ng-show="registarationSuccess || loginSuccess">{{user.login}}</h2>
+
         <md-button class="md-raised md-accent"
                    ng-show="registarationSuccess || loginSuccess"
-                   ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}">
+                   ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}"
+                ng-click="logOut(user)">
             Log Out</md-button>
     </div>
 </div>
