Refactoring fronend. Create dialogWindow service.

--- a/client/js/directives/menuButtons.html
+++ b/client/js/directives/menuButtons.html
@@ -16,16 +16,16 @@
          flex-sm="100">
         <h2 ng-show="registarationSuccess || loginSuccess">{{user.username}}</h2>
         <md-button class="md-raised md-accent"
-                   ng-hide="registarationSuccess || loginSuccess"
+                   ng-hide="loginSuccess"
                    ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}"
                    ng-click="showLogIn($event)">Log In</md-button>
         <md-button class="md-raised md-accent"
-                   ng-hide="registarationSuccess || loginSuccess"
+                   ng-hide="loginSuccess"
                    ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}"
                    ng-click="showRegistration($event)">Registration</md-button>
 
         <md-button class="md-raised md-accent"
-                   ng-show="registarationSuccess || loginSuccess"
+                   ng-show="loginSuccess"
                    ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}"
                 ng-click="logOut(user)">
             Log Out</md-button>
