Create image model. Save image to te server for login user. POST and DELETE image. Get list of saved images

--- a/client/js/directives/menuButtons.html
+++ b/client/js/directives/menuButtons.html
@@ -7,7 +7,7 @@
         <md-button ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}" href="#/">Home</md-button>
         <md-button ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}" ui-sref="app.uploadImage">Upload image</md-button>
         <md-button ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}" ui-sref="app.freePattern">Free pattern</md-button>
-        <md-button ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}" ui-sref="app.learn">Learn</md-button>
+        <md-button ng-class="{'full-button': $mdMedia('sm')||$mdMedia('xs')}" ui-sref="app.myPattern" ng-show="loginSuccess">My patter</md-button>
     </div>
     <div layout-gt-sm="row"
          layout-sm="column"
