--- a/Ionic/EP/www/index.html
+++ b/Ionic/EP/www/index.html
@@ -6,6 +6,8 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
+
     <link href="css/style.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
