--- a/Ionic/EP/www/js/directives/listOfColor.html
+++ b/Ionic/EP/www/js/directives/listOfColor.html
@@ -1,39 +1,25 @@
-<div>
-    <div class="dialog-list-container"
-         layout="row"
-         layout-padding
-         flex="100">
-        <div class="dialog-list-color"
-             layout-align="center center">
+<div class="list card">
+    <div class="dialog-list-container item">
+        <div class="dialog-list-color">
             Color
         </div>
-        <div class="dialog-list-number"
-             layout-align="center center">
+        <div class="dialog-list-number">
             Number
         </div>
-        <div class="dialog-list-name"
-             layout-align="center center"
-             flex>
+        <div class="dialog-list-name">
             Name
         </div>
     </div>
-    <div class="dialog-list-container"
-         layout="row"
-         layout-padding
-         flex="100"
+    <div class="dialog-list-container item"
          ng-repeat="color in listOfColors">
-        <div layout-align="start center"
-             class="dialog-list-color">
+        <div class="dialog-list-color">
             <div class="colorCircle"
                  ng-style="{'background-color': color.color}"></div>
         </div>
-        <div layout-align="center center"
-             class="dialog-list-number">
+        <div class="dialog-list-number">
             {{color.dmccode}}
         </div>
-        <div flex
-             layout-align="center center"
-             class="dialog-list-name">
+        <div class="dialog-list-name">
             {{color.name}}
         </div>
     </div>
