--- a/Ionic/EP/www/index.html
+++ b/Ionic/EP/www/index.html
@@ -19,7 +19,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 
     <!-- your app's js -->
     <script src="_bower.js"></script>
